[iOS] Don't reparent logo for voice search view unless fully visible.

This CL updates the NTP to only return the logo animation controller for
voice search transition animations if the logo is fully visible.

Bug: 863381
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I73b68748d89cea6bd9b0292847496760c41e66b6
Reviewed-on: https://chromium-review.googlesource.com/1200570
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589246}
Former-commit-id: a26c112700183654bfb19e221b9b269d60bd9d49